# edaf75

./: pyproject.toml  shell.nix
lab1/: lab1.ipynb  lab1.sqlite
lab1/.ipynb_checkpoints/: lab1-checkpoint.ipynb
lab2/: lab2-answers.md  lab2-nb.ipynb  lab2.sql  model.uxf  movies.sqlite
lab2/.ipynb_checkpoints/: lab2-nb-checkpoint.ipynb
lab3/: check-lab3.py  lab3.ipynb  lab3.py  lab3.sql  movies.sqlite
lab3/.ipynb_checkpoints/: lab3-checkpoint.ipynb
