[tool.jupysql.SqlMagic]
feedback = true
autopandas = true

[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupysql = "^0.10.7"
click = "^8.1.7"
toml = "^0.10.2"
jupyterlab = "^4.0.10"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
